@@ -1,8 +1,6 @@
 AUX 2.3.2/heyu.init 386 RMD160 4d085a00c988fda52ec946913747c9b8f3036197 SHA1 c52f45f09834c6f43a58f2f97c2bdd5a4919980c SHA256 9a3a17980dd2722406de0a13bcb497f9b074c0e3566c607168fa3f8b72770e3a
 AUX 2.4.0/heyu.init 386 RMD160 4d085a00c988fda52ec946913747c9b8f3036197 SHA1 c52f45f09834c6f43a58f2f97c2bdd5a4919980c SHA256 9a3a17980dd2722406de0a13bcb497f9b074c0e3566c607168fa3f8b72770e3a
-DIST heyu-2.3.2.tgz 478683 RMD160 19da3478adfd6e06866fcf155f8bbe13d16f990d SHA1 4b1cf264a384931736ece72629d79f6c0c6102ab SHA256 71d382bcc9f8106f207686baac4225fa3cbde7f9349d973af5bd692fd03d3f04
 DIST heyu-2.4.0.tgz 487725 RMD160 e58e18fff4f59506cc9da46ad701273c5924176b SHA1 33c85b2653536e36244b1a093f8c2a96714e4540 SHA256 7a02c9774d9445bf9f5834b248a8aaffdb3f7a3791212845aa4ffbbebbd46bdc
-EBUILD heyu-2.3.2.ebuild 2463 RMD160 b822fff5663bf8ba0f3185bb9b5746195ae8c896 SHA1 26bd96d225de57d4196cacc9644be1d343eafa73 SHA256 e24baa26cd6d36b6503b911ab16640941f5e0bb1f1b6fdce4494ecc3699cda7f
 EBUILD heyu-2.4.0.ebuild 2463 RMD160 b822fff5663bf8ba0f3185bb9b5746195ae8c896 SHA1 26bd96d225de57d4196cacc9644be1d343eafa73 SHA256 e24baa26cd6d36b6503b911ab16640941f5e0bb1f1b6fdce4494ecc3699cda7f
-MISC ChangeLog 781 RMD160 52ef449b68adf7aba8438987f8cfa9c921409635 SHA1 62d5308f889de96d5bbfe6de39a4bb9a8107a3b4 SHA256 9b3088d2c6d519f0257c2cc69be3e93e48e42915840f35adfdc3e56d9b030fbc
+MISC ChangeLog 882 RMD160 b60c6a72f6e6d9823da30263870d2c9df594fcf4 SHA1 a7f3c36b7df03904f2a006903bf8b8cdc8844540 SHA256 5916d768774262d79ab7e8a670440d0b22dca611f4cad678e93afc333b2d8652
 MISC metadata.xml 1225 RMD160 9cc4a306989b21aadc2c46cbe77b49d94f5f7531 SHA1 01b5d2dfc5446f495689a0d1a8357982464e54fb SHA256 9b9ac8546a69802b4de3818d06e98c4738485d6634fb6375f087cb1ae2853a07
